--- a/less/character-sheet.less
+++ b/less/character-sheet.less
@@ -61,12 +61,12 @@
 
         .skillsSpacer{
             flex-basis: 100%;
-            width: 2.5%;
+            width: 2%;
         }
 
         .skillsMidSpacer {
             flex-basis: 100%;
-            width: 5%;
+            width: 6%;
         }
 
         .skillHeader {
